main: Site Policies Page Created

--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Signin/Register.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Signin/Register.cshtml
@@ -102,16 +102,22 @@
                             <i class="ti-lock"></i>
                             <span asp-validation-for="ConfirmPassword" class="d-block text-danger"></span>
                         </div>
+                        <div class="row my-3">
+                            <div class="col-6">
+                                I accepet <a class="" href="/Home/Policies">Site Policies</a>
+                            </div>
+                        </div>
                         <div class="submit-btn-area">
                             <button id="form_submit" type="submit">Submit <i class="ti-arrow-right"></i></button>
+
                             @*<div class="login-other row mt-4">
-                                <div class="col-6">
-                                    <a class="fb-login" href="#">Sign up with <i class="fa fa-facebook"></i></a>
-                                </div>
-                                <div class="col-6">
-                                    <a class="google-login" href="#">Sign up with <i class="fa fa-google"></i></a>
-                                </div>
-                            </div>*@
+                                    <div class="col-6">
+                                        <a class="fb-login" href="#">Sign up with <i class="fa fa-facebook"></i></a>
+                                    </div>
+                                    <div class="col-6">
+                                        <a class="google-login" href="#">Sign up with <i class="fa fa-google"></i></a>
+                                    </div>
+                                </div>*@
                         </div>
                         <div class="form-footer text-center mt-5">
                             <p class="text-muted">Don't have an account? <a href="/Signin/Login">Sign in</a></p>
