--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/Error.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/Error.cshtml
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="error-content">
                 <h2>Error </h2>
-                <p>Opps . We have some error. Plase Contact me and raport this error</p>
+                <p>Opps . We have some error. Plase Contact me and raport this error. <a href="/#contact"></a></p>
                 <a href="/">Back to Main Page</a>
             </div>
         </div>
