--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Assistant/Search.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Assistant/Search.cshtml
@@ -47,6 +47,55 @@
                 <div class="col-md-8">
                     <div class="post-box">
 
+                        <ul class="nav nav-tabs" id="myTab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Blogs</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Users</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content mt-3" id="myTabContent">
+                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                <div class="widget-sidebar mb-2 p-0 sidebar-search">
+                                    <h5 class="sidebar-title">Search All Blogs and Users</h5>
+                                    <div class="sidebar-content">
+                                        <form method="post" asp-controller="Assistant" asp-action="Search">
+                                            <div class="input-group">
+                                                <input type="text" class="form-control" required name="info" placeholder="Search for..."
+                                                       aria-label="Search for...">
+                                                <input type="checkbox" style="width:0;height:0;visibility:hidden;" name="isAll" checked value="@true.ToString()" />
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-secondary btn-search" type="submit">
+                                                        <span class="bi bi-search"></span>
+                                                    </button>
+                                                </span>
+
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                <div class="widget-sidebar mt-3 mb-2 p-0 sidebar-search">
+                                    <h5 class="sidebar-title">Search Users</h5>
+                                    <div class="sidebar-content">
+                                        <form>
+                                            <div class="input-group">
+                                                <input type="text" class="form-control" placeholder="Search for Users"
+                                                       aria-label="Search for...">
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-secondary btn-search" type="button">
+                                                        <span class="bi bi-search"></span>
+                                                    </button>
+                                                </span>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="widget-sidebar mb-2 p-0 sidebar-search">
                             <h5 class="sidebar-title">Search All Blogs and Users</h5>
                             <div class="sidebar-content">
@@ -74,7 +123,7 @@
 
                                 @foreach (var item in Model.Tags)
                                 {
-                                    <a class="btn ml-1 rounded-pill btn-primary" href="/Assistant/TagBlogs/@item.Id">@item.Name <i class="bi bi-tag"></i></a>
+                                    <a class="btn ml-1 mb-2 rounded-pill btn-primary" href="/Assistant/TagBlogs/@item.Id">@item.Name <i class="bi bi-tag"></i></a>
                                 }
 
                             </div>
@@ -153,24 +202,18 @@
                             </div>
                         </div>
                     }
-
-                    <div class="widget-sidebar">
-                        <h5 class="sidebar-title">Top Post in All Users</h5>
-                        <div class="sidebar-content">
-                            <ul class="list-sidebar">
-                                @foreach (var item in Model.Popliar)
-                                {
-                                    <li>
-                                        <a href="/Home/SinglePage/@item.Id">@item.Title</a>
-                                    </li>
-                                }
-                            </ul>
-                        </div>
-
-                    </div>
+                    @await Component.InvokeAsync("TopBlog")
                 </div>
             </div>
         </div>
     </section><!-- End Blog Single Section -->
 
 </main><!-- End #main -->
+
+@section script{
+    <script src="~/Admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
+    <!-- bootstrap 4 js -->
+    <script src="~/Admin/assets/js/popper.min.js"></script>
+    <script src="~/Admin/assets/js/bootstrap.min.js"></script>
+}
+
