--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/SinglePage.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/SinglePage.cshtml
@@ -288,75 +288,9 @@
                             </form>
                         </div>
                     </div>
-                    <div class="widget-sidebar">
-                        <h5 class="sidebar-title">Recent Post in @Model.Blog.User.UserName</h5>
-                        <div class="sidebar-content">
-                            <ul class="list-sidebar">
 
-                                @foreach (var item in Model.Blogs.Take(3))
-                                {
-                                    <li>
-                                        <a href="/Home/SinglePage/@item.Id">
-                                            @if (item.Title.Length > 50)
-                                            {
-                                                <span>
-                                                    @item.Title.Substring(0, 50) ...
-                                                </span>
-                                            }
-                                            else
-                                            {
-                                                <span>
-                                                    @item.Title
-                                                </span>
-                                            }
-
-                                        </a>
-                                    </li>
-                                }
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="widget-sidebar">
-                        <h5 class="sidebar-title">Archives in @Model.Blog.User.UserName</h5>
-                        <div class="sidebar-content">
-
-                            @if (Model.Blogs.Count > 3)
-                            {
-                                <ul class="list-sidebar">
-                                    @for (int i = 3; i < Model.Blogs.Count; i++)
-                                    {
-                                        <li>
-                                            <a href="/Home/SinglePage/@Model.Blogs[i].Id">
-                                                @if (Model.Blogs[i].Title.Length > 50)
-                                                {
-                                                    <span>
-                                                        @Model.Blogs[i].Title.Substring(0, 50) ...
-                                                    </span>
-                                                }
-                                                else
-                                                {
-                                                    <span>
-                                                        @Model.Blogs[i].Title
-                                                    </span>
-                                                }
-
-                                            </a>
-                                        </li>
-                                    }
-                                </ul>
-                                <a class="btn mt-3 d-block btn-primary" href="/Assistant/SeeArchives/@Model.Blog.Id">See All</a>
-                            }
-                            else
-                            {
-                                <ul class="list-sidebar">
-                                    <li>
-                                        Not yet Archived
-                                    </li>
-                                </ul>
-                            }
-
-                        </div>
-                    </div>
+                    @await Component.InvokeAsync("Blogs",Model.Blog.Id)
+                    
                     <div class="widget-sidebar widget-tags">
                         <h5 class="sidebar-title">Tags</h5>
                         <div class="sidebar-content">
